Wired up settings

--- a/src/webui/settings.html
+++ b/src/webui/settings.html
@@ -325,7 +325,7 @@ $(function() {
           onCancel(e);
       }
   });
-  // Make all submit buttons equal width.
+  // Make all submit buttons are equal width.
   var maxWidth = 0;
   $('.submit.btn').each(function() {
     maxWidth = Math.max($(this).width(), maxWidth);
