--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -282,10 +282,9 @@ circle.attr("stroke", "#fff");
         <!-- SETTINGS ==================================================-->
         <div class="tab-pane fade" id="settings-pane">
 
-<div class="alert" style="position:absolute;width:90%">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong>Warning!</strong> Best check yo self, you're not looking too good.
-</div>
+          <div class="alert alert-error affix value-error-alert hidden">
+            <strong>Error!</strong> Please fix incorrect values before proceeding.
+          </div>
 
           <form class="vpn-incompatible">
             <fieldset>
