Fixed horizontal scrollbar in RTL

--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -56,8 +56,8 @@
 
 <body dir="ltr">
 
-  <div class="banner row">
-    <div class="span12 text-center">
+  <div class="row">
+    <div class="span12 text-center banner">
       <img src="banner.png">
     </div>
   </div>
